force-app/main/default/objects/TestOrder__c/TestOrder__c.object-meta.xml
<CustomObject>
    <label>Test Order</label>
    <nameField>
        <displayFormat>ORD-{00000}</displayFormat>
        <label>Test Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>