force-app/main/default/objects/TestOrder__c/fields/Ordering_Account__c.field-meta.xml
<CustomField>
    <fullName>Ordering_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ordering Account</label>
    <referenceTo>Ordering_Account__c</referenceTo>
    <relationshipLabel>Ordering Account</relationshipLabel>
    <relationshipName>Ordering_Account</relationshipName>
    <type>Lookup</type>
</CustomField>