force-app/main/default/objects/TestOrder__c/fields/TestMenu__c.field-meta.xml
<CustomField>
    <fullName>TestMenu__c</fullName>
    <label>Test Menu</label>
    <length>255</length>
    <type>Text</type>
</CustomField>