force-app/main/default/objects/TestOrder__c/fields/Treating_Physician_Information__c.field-meta.xml
<CustomField>
    <fullName>Treating_Physician_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Treating Physician Information</label>
    <referenceTo>Treating_Physician_Information__c</referenceTo>
    <relationshipLabel>Treating Physician Information</relationshipLabel>
    <relationshipName>Treating_Physician_Information</relationshipName>
    <type>Lookup</type>
</CustomField>